--- a/src/App.css
+++ b/src/App.css
@@ -11,4 +11,10 @@
 h1 {
   margin-bottom: 2rem;
   font-size: 2rem;
+}
+
+.game-over {
+  text-align: center;
+  margin: 1rem 0;
+  color: #fff;
 } 
