--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,29 @@
   color: white;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 h1 {
   margin-bottom: 2rem;
   font-size: 2rem;
+}
+
+h2 {
+  margin-bottom: 2rem;
+  font-size: 1rem;
 }
 
 .game-over {
